# PyEIDORS

./: .dockerignore  .gitignore  Dockerfile  FILE_ORGANIZATION.md  LICENSE  README.md  codex的认证.txt  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: publish-ghcr.yml
compare_with_Eidors/: export_geometry_from_eidors.m  import_geometry_from_pyeidors.m  render_eidors_native_reconstruction.m
data/measurements/: 2025-06-29-20-00-52_1_10.00_20uA_1000Hz.csv
data/measurements/EIT_DEV_Test/: 2025-09-23-00-01-56_10_10.00_100uA_2000Hz.csv  2025-09-23-00-01-56_10_10.00_100uA_2000Hz.yaml  2025-09-23-00-01-56_10_10.00_100uA_2000Hz_AD.csv
data/measurements/tank/: 2025-11-14-22-18-02_1_10.00_50uA_3000Hz.csv  2025-11-14-22-18-02_1_10.00_50uA_3000Hz.yaml
data/measurements/tank/2026-03-14_latest_tank_data/electrode01_metal_electrode05_plastic_electrode09_plastic/: 2026-03-14-21-30-29_1_10.00_55uA_1000Hz.csv
data/measurements/tank/2026-03-14_latest_tank_data/electrode01_metal_electrode05_plastic_electrode09_plastic_electrode13_metal/: 2026-03-14-21-21-31_1_10.00_60uA_1000Hz.csv  2026-03-14-21-27-54_1_10.00_55uA_1000Hz.csv
data/measurements/tank/3-14最新数据/1金属/: 2026-03-14-21-38-31_1_10.00_55uA_1000Hz.csv
data/measurements/tank/3-14最新数据/1金属-5塑料/: 2026-03-14-21-36-16_1_10.00_55uA_1000Hz.csv
data/measurements/tank/3-14最新数据/1金属-5塑料-9塑料-13金属/: 2026-03-14-21-22-38_1_10.00_20uA_1000Hz.csv
demos/: demo_optimized_mesh.py  demo_y_axis_electrodes.py
docs/: DOCKER.md  EIDORS_PYEIDORS_INTEROP.md  ELECTRODE_Y_AXIS_POSITIONING.md  MEASUREMENT_DATA_SPEC.md
docs/benchmarks/: difference_runtime.csv  difference_runtime_measurement.csv  difference_runtime_measurement_6_24.csv  difference_runtime_parameter.csv
docs/benchmarks/reviewer_r3_q4/: asset_manifest.json  benchmark_environment.json  highlights.txt  reproducibility_commands.txt  table_r3_q4_gpu_runtime_iteration_sweep.csv  table_r3_q4_gpu_runtime_summary.csv
docs/benchmarks/reviewer_r3_q4/raw/: iteration_sweep_raw.json  summary_raw.json
eit_meshes/: mesh_16e_r0p025_ref10_cov0p5.msh  mesh_16e_r0p025_ref10_cov0p5_association_table.ini  mesh_16e_r0p025_ref10_cov0p5_boundaries.h5  mesh_16e_r0p025_ref10_cov0p5_boundaries.xdmf  mesh_16e_r0p025_ref10_cov0p5_domain.h5  mesh_16e_r0p025_ref10_cov0p5_domain.xdmf
examples/: basic_usage.py
reports/: FINAL_PROJECT_SUMMARY.md  OPTIMIZED_MESH_GENERATOR_REPORT.md  SPARSE_BAYESIAN_VS_GN.md  difference_single_step_combos_corn.md  difference_single_step_golden_config.md
results/: test_report.md
results/corn_stem_imaging/difference/: COMMAND.md  outputs.npz
results/simulation_parity/run03_single_step/: COMMAND.md  metrics.json  synthetic_forward_data.csv
results/simulation_parity/run03_single_step/absolute/: predicted_absolute.csv
results/simulation_parity/run03_single_step/difference/: predicted_difference.csv
results/tank_final_results/: README.md
results/tank_final_results/difference_imaging_lam1.5/: COMMAND.md  outputs.npz
results/tank_final_results/difference_imaging_physical_bg0008_lam0.9/: COMMAND.md  outputs.npz
results/tank_final_results/sparse_bayesian_physical_bg0008_v1_0/: COMMAND.md
results/tank_final_results/sparse_bayesian_physical_bg0008_v1_0/reports/: 2025-11-14-22-18-02_1_10.00_50uA_3000Hz_summary.json
scripts/: run_absolute_reconstruction.py  run_cem_16e_square_test.py  run_difference_reconstruction.py  run_difference_single_step.py  run_gn_absolute_eidors_style.py  run_single_step_diff_realdata.py  run_single_step_diff_realdata_batch.py  run_sparse_bayesian_reconstruction.py  run_synthetic_parity.py
scripts/benchmarks/: aggregate_reviewer_suite.py  benchmark_difference_runtime.py  benchmark_jacobians.py  benchmark_reviewer_case.py  build_reviewer_r1_q5_assets.py  build_reviewer_r3_q4_assets.py  cross_generation_case.py  mesh_matched_control.py  reviewer_r1_q5_cem_vs_pyeit_core.py  run_reviewer_suite.ps1
scripts/common/: __init__.py  calibration.py  io_utils.py  mesh_utils.py
scripts/demos/: demo_fenics_random_sim.py  demo_fenics_single_step_diff.py
scripts/diagnostics/: combine_synthetic_outputs.py  compare_linear_systems.py  compare_simulation_results.py  make_absolute_vs_difference.py  plot_electrode_tags.py  scan_difference_signs.py
scripts/interop/: export_geometry_from_pyeidors.py  import_geometry_from_eidors.py  render_bridge_report.py  run_same_geometry_bridge.ps1
scripts/mesh_tools/: build_matlab_mesh_cache.py  convert_matlab_mesh.py
src/pyeidors/: __init__.py  core_system.py  main.py
src/pyeidors/data/: __init__.py  measurement_dataset.py  structures.py  synthetic_data.py
src/pyeidors/electrodes/: __init__.py  patterns.py
src/pyeidors/forward/: __init__.py  eit_forward_model.py
src/pyeidors/geometry/: __init__.py  mesh_converter.py  mesh_generator.py  mesh_loader.py  optimized_mesh_generator.py  simple_mesh_generator.py
src/pyeidors/interop/: __init__.py  geometry_exchange.py
src/pyeidors/inverse/: __init__.py
src/pyeidors/inverse/jacobian/: __init__.py  adjoint_jacobian.py  base_jacobian.py  direct_jacobian.py
src/pyeidors/inverse/regularization/: __init__.py  base_regularization.py  smoothness.py
src/pyeidors/inverse/solvers/: __init__.py  eit_pde.py  gauss_newton.py  sparse_bayesian.py
src/pyeidors/inverse/workflows/: __init__.py  absolute.py  base.py  difference.py  sparse_bayesian.py
src/pyeidors/utils/: chinese_font_config.py
src/pyeidors/visualization/: __init__.py  eit_plots.py
tests/: run_all_tests.py
tests/test_geometry/: test4.py
tests/unit/: test_cache.py  test_complete_eit_system.py  test_electrode_position_y_axis.py  test_interop_geometry_exchange.py  test_mesh_generation.py  test_modular.py  test_optimized_mesh_generator.py  test_pyeidors.py  test_real_mesh_generation.py  test_simplified_eit_system.py  verify_electrode_center.py
(+17 files in other folders)
